--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "@analytics/google-analytics": "^0.3.1",
     "@menadevs/objectron": "^0.1.10",
+    "analytics": "^0.3.5",
     "codemirror": "^5.53.2",
     "preact": "^10.4.0"
   },
